--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
+@import url("./secao3.css");
+@import url("./secao4.css");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, sans-serif;
+
 }
 
 body {
