--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,15 @@
+@import url('./header.css');
 @import url("./secao3.css");
 @import url("./secao4.css");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, sans-serif;
-
 }
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 }
