--- a/css/secao4.css
+++ b/css/secao4.css
@@ -2,19 +2,20 @@ section.secao4 {
     margin: 70px;
     font-size: 20px;
     display: flex;
-    gap: 100px;
-    .img {
-        width: 400px;
-        height: 300px;
+    gap: 50px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        object-fit: cover;
     }
-    h4 {
-        color:black;
-    }
-    .texto_secao4{
-        gap: 70px;
-        font-size: 22px;
-    }
-    h4.titulo_texto4{
-        color: blue;
+
+    .texto_secao4 {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        h4 { color: blue; }
     }
 }
