--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 
 @import url('./header.css');
 @import url('./slider.css');
+@import url('./section1.css');
 @import url("./secao3.css");
 @import url("./secao4.css");
 @import url('./footer.css');
