--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url('./header.css');
 @import url('./slider.css');
 @import url('./section1.css');
+@import url('./section2.css');
 @import url("./secao3.css");
 @import url("./secao4.css");
 @import url('./footer.css');
