--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@
 @import url('./section2.css');
 @import url("./secao3.css");
 @import url("./secao4.css");
+@import url("./secao5.css");
+@import url("./secao6.css");
 @import url('./footer.css');
 
 * {
