--- a/css/secao5.css
+++ b/css/secao5.css
@@ -1,54 +1,57 @@
+.secao5 {
+    padding: 0 70px;
 
-div.a{
-    height: 600px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-div.b{
-    width: 400px;
-    height: 400px;
-    border-radius: 15px;
-    margin: 15px;
-    text-align: center;
-    border: solid white 1px;
-    background-image: url("https://t.ctcdn.com.br/1EqFajKNkubKRqKbjMOvhFEnHKU=/825x464/smart/i265302.jpeg");
-    background-position: 75% 100%;
+    h3 {
+        color: #00F;
+        text-align: center;
+        margin-bottom: 25px;
+    }
 
-}
-div.c{
-    width: 400px;
-    height: 400px;
-    border-radius: 15px;
-    margin: 15px;
-    text-align: center;
-    border: solid white 1px;
-    background-image: url("https://worldvision.org.ni/wp-content/uploads/2021/02/agua-purificada-sobre-wv.jpg");
-    background-size: 400px 400px;
-}
-div.d{
-    width: 400px;
-    height: 400px;
-    border-radius: 15px;
-    margin: 15px;
-    text-align: center;
-    border: solid white 1px;
-    background-image: url("https://s2-umsoplaneta.glbimg.com/kVLU8916h3_W0zRIY9-UvEyKrKc=/0x0:1170x530/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_7d5b9b5029304d27b7ef8a7f28b4d70f/internal_photos/bs/2022/N/L/KRdTTIQqysRqERAIqVJw/image1170x530cropped.jpg");
-    background-size: 400px 400px;
-}
-div.subtitulo{
-    width: 50%;
-    height: 50%;
-    border: solid black 1px;
-    background-color:blue ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 70% auto;
-    top: 50%;
-}
+    .a {
+        height: 600px;
+        display: flex;
+        justify-content: center;
 
-h3.Titulo_secao5{
-    color: blue;
-    text-align: center;
+        .b, .c, .d {
+            width: 400px;
+            height: 400px;
+            position: relative;
+
+            border-radius: 15px;
+            margin: 15px;
+            text-align: center;
+
+            p {
+                width: 50%;
+                height: 50%;
+    
+                display: flex;
+                align-items: center;
+                padding: 15px;
+    
+                background-color: #00F;
+                color: #FFF;
+                border-radius: 10px;
+    
+                position: absolute;
+                top: 75%;
+                left: 25%; 
+            }
+        }
+
+        .b {
+            background-image: url("https://t.ctcdn.com.br/1EqFajKNkubKRqKbjMOvhFEnHKU=/825x464/smart/i265302.jpeg");
+            background-position: 75% 100%;
+        }
+
+        .c {
+            background-image: url("https://worldvision.org.ni/wp-content/uploads/2021/02/agua-purificada-sobre-wv.jpg");
+            background-size: 400px 400px;
+        }
+
+        .d {
+            background-image: url("https://s2-umsoplaneta.glbimg.com/kVLU8916h3_W0zRIY9-UvEyKrKc=/0x0:1170x530/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_7d5b9b5029304d27b7ef8a7f28b4d70f/internal_photos/bs/2022/N/L/KRdTTIQqysRqERAIqVJw/image1170x530cropped.jpg");
+            background-size: 400px 400px;
+        }
+    }
 }
