--- a/css/secao6.css
+++ b/css/secao6.css
@@ -1,10 +1,22 @@
-h3.Titulo_secao6{
-    text-align: center;
-    color: blue;
-}
-div.imagem_praia{
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+.secao6 {
+    padding: 0 70px;
+    margin-bottom: 70px;
+
+    h3 {
+        text-align: center;
+        color: #00F;
+        margin-bottom: 25px;
+    }
+
+    .imagem_praia {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+        }
+    }
 }
