--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,5 @@
 footer {
     max-width: 100%;
-    height: 10vh;
 
     display: flex;
     align-items: center;
@@ -10,7 +9,9 @@ footer {
     color: #FFF;
 
     div {
+        width: 10%;
         height: 100%;
+        display: flex;
 
         img {
             width: 100%;
@@ -21,5 +22,16 @@ footer {
     span {
         display: flex;
         gap: 15px;
+    }
+
+    @media (max-width: 768px) {
+        justify-content: space-between;
+        padding: 15px;
+
+        div { width: 25%; }
+
+        span { font-size: 10px };
+
+        strong:not(:first-child) { padding-right: 15px; }
     }
 }
