--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,10 @@ header {
                 }
             }
         }
+
+        @media (max-width: 768px) {
+            display: none;
+        }
     }
 
     button {
