--- a/css/secao4.css
+++ b/css/secao4.css
@@ -1,8 +1,10 @@
 section.secao4 {
-    margin: 70px;
-    font-size: 20px;
     display: flex;
     gap: 50px;
+    
+    margin-bottom: 75px;
+    padding: 0 75px;
+    font-size: 20px;
 
     img {
         width: 100%;
@@ -17,5 +19,13 @@ section.secao4 {
         gap: 15px;
 
         h4 { color: blue; }
+    }
+
+    @media (max-width: 768px) {
+        margin: 0 0 75px 0;
+        padding: 0 25px;
+
+        flex-direction: column-reverse;
+        gap: 25px;
     }
 }
