--- a/css/secao6.css
+++ b/css/secao6.css
@@ -1,6 +1,6 @@
 .secao6 {
-    padding: 0 70px;
-    margin-bottom: 70px;
+    padding: 0 75px;
+    margin-bottom: 75px;
 
     h3 {
         text-align: center;
@@ -18,5 +18,9 @@
             height: 100%;
             border-radius: 10px;
         }
+    }
+
+    @media (max-width: 768px) {
+        padding: 0 25px;
     }
 }
