--- a/css/section2.css
+++ b/css/section2.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-bottom: 75px;
 
-    .header { margin: 50px 0 25px 0; }
+    .header { margin-bottom: 25px; }
 
     .slider {
         width: 950px;
@@ -46,6 +47,17 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+    
+    @media (max-width: 768px) {
+        padding: 0 25px;
+        margin-bottom: 75px;
+
+        .container {
+            flex-wrap: wrap;
+            gap: 75px;
+            padding: 0;
         }
     }
 }
