--- a/css/header.css
+++ b/css/header.css
@@ -40,13 +40,13 @@ header {
         }
     }
 
-    button {
+    .login {
         border: none;
         padding: 10px 20px;
         border-radius: 5px;
         background-color: #00F;
         color: #FFF;
         font-weight: 500;
-        cursor: pointer;
+        text-decoration: none;
     }
 }
