Ajustes de responsividade

--- a/css/login.css
+++ b/css/login.css
@@ -52,6 +52,11 @@ main {
 
             &:hover { transform: scale(1.05); }
         }
+
+        @media (max-width: 768px) {
+            width: 100%;
+            padding: 0 25px;
+        }
     }
 
     .logged {
@@ -79,6 +84,12 @@ main {
             transition: transform 300ms;
 
             &:hover { transform: scale(1.05); }
+        }
+
+        @media (max-width: 768px) {
+            width: 100%;
+
+            div { align-self: center; }
         }
     }
 }
