--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@
 @import url("./secao6.css");
 @import url('./footer.css');
 
+html { scroll-behavior: smooth; }
+
 * {
     margin: 0;
     padding: 0;
