--- a/css/secao5.css
+++ b/css/secao5.css
@@ -48,7 +48,7 @@
         }
 
         .image_2 {
-            background-image: url("https://worldvision.org.ni/wp-content/uploads/2021/02/agua-purificada-sobre-wv.jpg");
+            background-image: url("../img/agua_suja.jpg");
         }
 
         .image_3 {
